--- a/index.html
+++ b/index.html
@@ -173,22 +173,22 @@
                         <tr>
                             <td class="team"><span class="nowrap">編成</span></td>
                             <td class="noborder">
-                                <button class="chars_tab-button" onclick="showScreen2('HuTao')"><img src="image\HuTao.png" alt="胡桃" class="chars_image"></button>
+                                <button class="chars_tab-button" onclick="showScreen2('HuTao')"><img src="HuTao.png" alt="胡桃" class="chars_image"></button>
                             </td>
                             <td class="noborder">
-                                <button class="chars_tab-button" onclick="showScreen2('Kazuha')"><img src="image\Kazuha.png" alt="万葉" class="chars_image"></button>
+                                <button class="chars_tab-button" onclick="showScreen2('Kazuha')"><img src="Kazuha.png" alt="万葉" class="chars_image"></button>
                             </td>
                             <td class="noborder">
-                                <button class="chars_tab-button" onclick="showScreen2('Bennett')"><img src="image\Bennett.png" alt="ベネット" class="chars_image"></button>
+                                <button class="chars_tab-button" onclick="showScreen2('Bennett')"><img src="Bennett.png" alt="ベネット" class="chars_image"></button>
                             </td>
                             <td class="noborder">
-                                <button class="chars_tab-button" onclick="showScreen2('Furina')"><img src="image\Furina.png" alt="フリーナ" class="chars_image"></button>
+                                <button class="chars_tab-button" onclick="showScreen2('Furina')"><img src="Furina.png" alt="フリーナ" class="chars_image"></button>
                             </td>
                             <td class="noborder">
-                                <button class="chars_tab-button" onclick="showScreen2('Ayaka')"><img src="image\Ayaka.png" alt="綾華" class="chars_image"></button>
+                                <button class="chars_tab-button" onclick="showScreen2('Ayaka')"><img src="Ayaka.png" alt="綾華" class="chars_image"></button>
                             </td>
                             <td class="noborder">
-                                <button class="chars_tab-button" onclick="showScreen2('Charlotte')"><img src="image\Charlotte.png" alt="シャルロット" class="chars_image"></button>
+                                <button class="chars_tab-button" onclick="showScreen2('Charlotte')"><img src="Charlotte.png" alt="シャルロット" class="chars_image"></button>
                             </td>
                         </tr>
                     </table>
@@ -634,7 +634,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>?/??</td>
+                        <td>8/24</td>
                         <td class="left_text">webページを公開</td>
                     </tr>
                 </table>
