--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     深境回廊 第7層 第2間 前半（会心ダメージ+120%）<br>
                     <input id="other_enemy" type="checkbox" class="checkbox_input exclusive" onchange="exclusive_box(this), set_enemy_level()">
                     その他<br>
-                    <span id="abyss_tip">会心ダメージ以外のバフは、キャラ設定 >> カスタムバフ から入力してください。</span>
+                    <span id="abyss_tip">会心ダメージ以外のバフはカスタムバフから入力してください。</span>
                 </p>
                 <p>
                     <span>
