--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             <div id="settings" class="screen1">
                 <h3>敵</h3>
                 <p>
-                    <input id="shouki_no_kami" type="checkbox" class="checkbox_input exclusive" onchange="exclusive_box(this), set_enemy_level()" checked>
+                    <input id="shouki_no_kami" type="checkbox" class="checkbox_input exclusive" onchange="choose_one(this), set_enemy_level()" checked>
                     七葉寂照秘密主（元素耐性-140%）<br>
-                    <input id="abyss" type="checkbox" class="checkbox_input exclusive" onchange="exclusive_box(this), set_enemy_level()">
+                    <input id="abyss" type="checkbox" class="checkbox_input exclusive" onchange="choose_one(this), set_enemy_level()">
                     深境回廊 第7層 第2間 前半（会心ダメージ+120%）<br>
-                    <input id="other_enemy" type="checkbox" class="checkbox_input exclusive" onchange="exclusive_box(this), set_enemy_level()">
+                    <input id="other_enemy" type="checkbox" class="checkbox_input exclusive" onchange="choose_one(this), set_enemy_level()">
                     その他<br>
                     <span id="abyss_tip">会心ダメージ以外のバフはカスタムバフから入力してください。</span>
                 </p>
