--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
                 </p>
                 <p>
                     このツールの誤りや不具合を発見された方は、記事で報告してくださると嬉しいです。また、キャラクターや武器などの追加のリクエストも受け付けております。<br>
-                    <a>ここにリンクを貼る</a>
+                    <a href="https://www.hoyolab.com/article/32436767" target="_blank">「胡桃ダメージチャレンジ専用計算機」を公開しました</a>
                 </p>
 
                 <h3>外部リンク</h3>
@@ -650,7 +650,7 @@
             <a href="https://www.hoyolab.com/accountCenter/postList?id=103140761" target="_blank">
             https://www.hoyolab.com/accountCenter</a></p>
         <p>
-            このツールの誤りを発見された方は、記事で報告してくださると嬉しいです。<br>
+            このツールの誤りを発見された方は、<a href="https://www.hoyolab.com/article/32436767" target="_blank">記事</a>で報告してくださると嬉しいです。<br>
             また、キャラクターや武器などの追加のリクエストも受け付けております！
         </p>
     </footer>
