--- a/index.html
+++ b/index.html
@@ -627,15 +627,10 @@
                 <h3>更新履歴</h3>
                 <table>
                     <tr>
-                        <td>?/??</td>
-                        <td class="left_text">
-                            胡桃ダメージチャレンジ専用計算機の紹介記事をHoYoLABで公開<br>
-                            <a>ここにリンクを貼る</a>
-                        </td>
-                    </tr>
-                    <tr>
                         <td>8/24</td>
-                        <td class="left_text">webページを公開</td>
+                        <td class="left_text">webページを公開<br>
+                            胡桃ダメージチャレンジ専用計算機の紹介記事をHoYoLABで公開<br>
+                        </td>
                     </tr>
                 </table>
 
