--- a/index.html
+++ b/index.html
@@ -192,25 +192,25 @@
                         <tr>
                             <td class="team"><span class="nowrap">編成</span></td>
                             <td class="noborder">
-                                <button class="chars_tab-button" onclick="showScreen2('HuTao')"><img src="image\HuTao.png" alt="胡桃" class="chars_image"></button>
+                                <button class="chars_tab-button" onclick="showScreen2('HuTao')"><img src="HuTao.png" alt="胡桃" class="chars_image"></button>
                             </td>
                             <td class="noborder">
-                                <button class="chars_tab-button" onclick="showScreen2('Kazuha')"><img src="image\Kazuha.png" alt="万葉" class="chars_image"></button>
+                                <button class="chars_tab-button" onclick="showScreen2('Kazuha')"><img src="Kazuha.png" alt="万葉" class="chars_image"></button>
                             </td>
                             <td class="noborder">
-                                <button class="chars_tab-button" onclick="showScreen2('Xilonen')"><img src="image\Xilonen.png" alt="シロネン" class="chars_image"></button>
+                                <button class="chars_tab-button" onclick="showScreen2('Xilonen')"><img src="Xilonen.png" alt="シロネン" class="chars_image"></button>
                             </td>
                             <td class="noborder">
-                                <button class="chars_tab-button" onclick="showScreen2('Bennett')"><img src="image\Bennett.png" alt="ベネット" class="chars_image"></button>
+                                <button class="chars_tab-button" onclick="showScreen2('Bennett')"><img src="Bennett.png" alt="ベネット" class="chars_image"></button>
                             </td>
                             <td class="noborder">
-                                <button class="chars_tab-button" onclick="showScreen2('Furina')"><img src="image\Furina.png" alt="フリーナ" class="chars_image"></button>
+                                <button class="chars_tab-button" onclick="showScreen2('Furina')"><img src="Furina.png" alt="フリーナ" class="chars_image"></button>
                             </td>
                             <td class="noborder">
-                                <button class="chars_tab-button" onclick="showScreen2('Ayaka')"><img src="image\Ayaka.png" alt="綾華" class="chars_image"></button>
+                                <button class="chars_tab-button" onclick="showScreen2('Ayaka')"><img src="Ayaka.png" alt="綾華" class="chars_image"></button>
                             </td>
                             <td class="noborder">
-                                <button class="chars_tab-button" onclick="showScreen2('Citlali')"><img src="image\Citlali.png" alt="シトラリ" class="chars_image"></button>
+                                <button class="chars_tab-button" onclick="showScreen2('Citlali')"><img src="Citlali.png" alt="シトラリ" class="chars_image"></button>
                             </td>
                         </tr>
                     </table>
